--- a/index.html
+++ b/index.html
@@ -9,10 +9,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
-<body>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- <img src="img5.png" alt="" srcset="">
- <solved>
+<body>
+    <header>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container">
+        <h1 class="navbar-brand">Titulo</h1>
+       </div>
+        </nav>
+        <div class="container">
+            <div>
+             Clases abiertas registrate ahora! </br>
+             <button class="btn btn-primary">Registrate ahora </button>
+            </div>
+        </div> 
+    </header>
+    <main>
+        <div class="row" id="row-cursos">
+        </div>
+        <div class="row" id="row-nosotros">
+        </div>
+        <div class="row" id="row-datos">  
+        </div>
+        <div class="row" id="row-servicios">    
+        </div>
+        <div class="row" id="row-frace">
+        <div class="row" id="row-contacto">
+         </div>         
+        </div>
+    </main>
+    <footer>
+    </footer>
+ 
 </body>
 </html>
