--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container">
-        <h1 class="navbar-brand">Titulo</h1>
-       </div>
+                <h1 class="navbar-brand">Titulo</h1>
+            </div>
         </nav>
         <div class="container">
             <div>
-             Clases abiertas registrate ahora! </br>
-             <button class="btn btn-primary">Registrate ahora </button>
+                Clases abiertas registrate ahora! </br>
+                <button class="btn">Registrate ahora</button>
             </div>
         </div> 
     </header>
@@ -37,7 +37,7 @@
         </div>
         <div class="row" id="row-frace">
         <div class="row" id="row-contacto">
-         </div>         
+        </div>         
         </div>
     </main>
     <footer>
