--- a/index.html
+++ b/index.html
@@ -13,21 +13,49 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark">
             <div class="container">
-                <h1 class="navbar-brand">Titulo</h1>
+                <img class="logo" src="assets/logo.png" alt="swimmers" srcset=""> 
             </div>
         </nav>
         <div class="container">
-            <div>
+            <div class="title">
                 Clases abiertas registrate ahora! </br>
-                <button class="btn">Registrate ahora</button>
+                <button class="btn-primary mt-3">Registrate ahora</button>
             </div>
         </div> 
     </header>
     <main>
-        
-        <div class="row" id="row-cursos">
+    <div class="row text-white py-5" id="row-cursos">
+        <div class="container text-center"> 
+        <div class="col-md">
+            <div class="row">
+                <h1 class="font-weight-bold"> Nuestros Cursos </h1>
+                <h4>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</h4>
+                </div>
+        </div>
+            <div class="row">
+                <div class="row"></div>
+                <div class="col">
+                    <img src="assets/img1.png" alt="atlet" srcset="">
+                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
+                </div>
+                <div class="col">
+                    <img src="assets/img2.png" alt="atlet" srcset="">
+                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
+                </div>
+                <div class="col">
+                    <img src="assets/img3.png" alt="atlet" srcset="">
+                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+            
         </div>
         <div class="row" id="row-nosotros">
         </div>
@@ -42,6 +70,6 @@
     </main>
     <footer>
     </footer>
- 
+
 </body>
 </html>
