--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <main>
     <div class="row text-white py-5" id="row-cursos">
         <div class="container text-center"> 
-        <div class="col-md">
-            <div class="row">
-                <h1 class="font-weight-bold"> Nuestros Cursos </h1>
+            <div class="d-flex justify-content-cenet">
+                <div class="col-md7">
+                
+                    <h1 class="font-weight-bold"> Nuestros Cursos </h1>
                 <h4>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</h4>
                 </div>
-        </div>
+            </div>
             <div class="row">
-                <div class="row"></div>
                 <div class="col">
                     <img src="assets/img1.png" alt="atlet" srcset="">
                     <h5 class="font-weight-bold">LOREM NAME</h5>
