--- a/index.html
+++ b/index.html
@@ -26,38 +26,46 @@
         </div> 
     </header>
     <main>
-    <div class="row text-white py-5" id="row-cursos">
+        <div class="row text-white py-5" id="row-cursos">    
         <div class="container text-center"> 
-            <div class="d-flex justify-content-cenet">
-                <div class="col-md7">
+            <div class="d-flex justify-content-center">
+                <div class="col-md">
                 
                     <h1 class="font-weight-bold"> Nuestros Cursos </h1>
-                <h4>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</h4>
+                    <h5>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</h5>
                 </div>
-            </div>
-            <div class="row">
+             </div>
+             <div class="row mt-4">
                 <div class="col">
                     <img src="assets/img1.png" alt="atlet" srcset="">
-                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <h5 class="font-weight-bold mt-4">LOREM NAME</h5>
                     <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
                 </div>
                 <div class="col">
                     <img src="assets/img2.png" alt="atlet" srcset="">
-                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <h5 class="font-weight-bold mt-4">LOREM NAME</h5>
                     <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
                 </div>
                 <div class="col">
                     <img src="assets/img3.png" alt="atlet" srcset="">
-                    <h5 class="font-weight-bold">LOREM NAME</h5>
+                    <h5 class="font-weight-bold mt-4">LOREM NAME</h5>
                     <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​.</p>
                 </div>
- 
+            </div>
             </div>
         </div>
-    </div>
-            
-        </div>
         <div class="row" id="row-nosotros">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <img src="assets/img4.png" alt="" srcset="">
+
+                    </div>
+                    <div class="col">
+                        <h1>Sobre Nosotros</h1>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row" id="row-datos">  
         </div>
