--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>landing</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <body>
     <header>
         <nav class="navbar navbar-dark">
@@ -54,20 +51,50 @@
             </div>
             </div>
         </div>
-        <div class="row" id="row-nosotros">
+        <div class="row py-5" id="row-nosotros">
             <div class="container">
-                <div class="row">
-                    <div class="col">
+                <div class="row py-5">
+                    <div class="col md-5 text-center">
                         <img src="assets/img4.png" alt="" srcset="">
-
                     </div>
-                    <div class="col">
-                        <h1>Sobre Nosotros</h1>
+                    <div class="col-md-7 mt-4">
+                        <h1 class="font-weight-bold title1 mb-3">Sobre Nosotros</h1>
+                        <p>
+                        Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.
+                        </p>
+                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row" id="row-datos">  
+        <div class="row py-5" id="row-datos">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col">
+                        <div class="mx-auto circulo d-flex justify-content-center align-items-center">
+                            <h1 class="font-weight-bold title1">10</h1>
+                    </div>
+                    <h5 class="font-weight-bold mt-3 text-white">SWIMMING POOL</h5>
+                </div>
+                <div class="col">
+                    <div class="mx-auto circulo d-flex justify-content-center align-items-center">
+                        <h1 class="font-weight-bold title1">35</h1>
+                </div>
+                <h5 class="font-weight-bold mt-3 text-white">DIFERENT SERVICES</h5>
+                </div>
+                <div class="col">
+                    <div class="mx-auto circulo d-flex justify-content-center align-items-center">
+                        <h1 class="font-weight-bold title1">40</h1>
+                </div>
+                <h5 class="font-weight-bold mt-3 text-white">COACHS</h5>
+                </div>
+                <div class="col">
+                    <div class="mx-auto circulo d-flex justify-content-center align-items-center">
+                        <h1 class="font-weight-bold title1">200+</h1>
+                </div>
+                <h5 class="font-weight-bold mt-3 text-white">Members</h5>
+                </div>
+            </div>
         </div>
         <div class="row" id="row-servicios">    
         </div>
@@ -78,6 +105,8 @@
     </main>
     <footer>
     </footer>
-
+    <!--Js dependencies-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
